objects/vlocity_cmt__VlocityDataPackConfiguration__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ActivateLimit__c</fullName>
        <label>Activate Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivateService__c</fullName>
        <label>Activate Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivateType__c</fullName>
        <label>Activate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultActivateLimit__c</fullName>
        <label>Activate Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultActivateService__c</fullName>
        <label>Activate Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultExportLimit__c</fullName>
        <label>Export Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultExportService__c</fullName>
        <label>Export Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultImportLimit__c</fullName>
        <label>ImportLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultImportPostProcess__c</fullName>
        <label>Default Import Post Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultImportService__c</fullName>
        <label>Import Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExportLimit__c</fullName>
        <label>Export Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExportService__c</fullName>
        <label>Export Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExportType__c</fullName>
        <label>Export Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImportLimit__c</fullName>
        <label>ImportLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImportService__c</fullName>
        <label>Import Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImportType__c</fullName>
        <label>Import Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PrimarySObjectType__c</fullName>
        <label>Primary SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidateService__c</fullName>
        <label>Validate Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidateType__c</fullName>
        <label>Validate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Data Pack Configuration</label>
    <pluralLabel>Vlocity Data Pack Configuration</pluralLabel>
</CustomObject>